<resources>
    <string name="app_name">TreningsAppJava</string>
    <string name="workout">Workout</string>
    <string name="get_fuckin_pumped_boi">Are you ready to pump?</string>
    <string name="username"></string>
    <string name="login">Log in!</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="sets">sets</string>
    <string name="setprogression">setProgression</string>
    <string name="kg">kg</string>
    <string name="_000">000</string>
    <string name="_0">0</string>
    <string name="exercise">Exercise:</string>
    <string name="_5">5</string>
    <string name="blank">blank</string>
    <string name="deadlift">Deadlift</string>
    <string name="dumbbell_press">Dumbbell Press</string>
    <string name="barbell_rows">Barbell Rows</string>
    <string name="squat">Squat</string>
    <string name="overhead_press">Overhead Press</string>
    <string name="reps">Reps:</string>
    <string name="register">New pumper?</string>
    <string name="deleteEx">Delete exercise?</string>
    <string name="yes">Yep</string>
    <string name="no">Nope</string>
    <string name="new_template_name">Save workout as template?</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Finish</string>
    <string name="action_sign_in">long sign in?</string>
    <string name="login_failed">Login Failed</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="welcome_message">Get heckin pumped,\n%1$s!</string>
    <string name="sesh_tracker">Current sesh: %1$s/%2$s</string>
    <string name="test2">Noolol</string>
    <string name="test3">Noolol</string>
    <string name="test4">Noolol</string>
    <string name="test5">Noolol</string>




</resources>