<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/seekBarValue"
        android:layout_width="27dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/seekBar"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_toEndOf="@+id/seekBar"
        android:gravity="center_horizontal"
        android:text="@string/_0"
        android:textColor="#FAD988"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="0dp"
        android:gravity="center_horizontal"
        android:text="@string/name"
        android:textColor="#FAD988"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/setsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/kgTextView"
        android:layout_alignBottom="@+id/kgTextView"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toStartOf="@+id/seekBarValue"
        android:text="@string/sets"
        android:textColor="#FAD988"
        android:textSize="16sp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="298dp"
        android:layout_height="29dp"
        android:layout_below="@+id/nameTextView"
        android:layout_alignStart="@+id/nameTextView"
        android:layout_marginStart="-11dp"
        android:layout_marginTop="5dp"
        android:clickable="false"
        android:contentDescription="@string/setprogression"
        android:max="1"
        android:scaleY="2" />

    <TextView
        android:id="@+id/kgTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nameTextView"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/weightTextView"
        android:text="@string/kg"
        android:textColor="#FAD988"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nameTextView"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/nameTextView"
        android:text="000"
        android:textColor="#FAD988"
        android:textSize="20sp" />

</RelativeLayout>