<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/settingsBtn"
        android:layout_width="183dp"
        android:layout_height="67dp"
        android:layout_marginBottom="32dp"
        android:text="@string/settings"
        android:textSize="24sp"
        app:iconTint="#323131"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="274dp"
        android:layout_height="33dp"
        android:text="@string/get_fuckin_pumped_boi"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/workoutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/workoutBtn"
        android:layout_width="183dp"
        android:layout_height="67dp"
        android:layout_marginBottom="16dp"
        android:text="@string/workout"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/settingsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>