<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
<<<<<<< HEAD
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/get_fuckin_pumped_boi"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/workoutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

<<<<<<<< HEAD:app/src/main/res/layout/activity_login.xml
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/userNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="160dp"
        android:hint="username"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/firstNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:hint="First Name"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/userNameEditText"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="@+id/userNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/lastNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:hint="Last Name"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/firstNameEditText"
        app:layout_constraintStart_toStartOf="@+id/firstNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailEditText"
        android:layout_width="297dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:hint="Email"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/lastNameEditText"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/lastNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText" />
========
    <Button
        android:id="@+id/workoutBtn"
        android:layout_width="183dp"
        android:layout_height="67dp"
        android:layout_marginBottom="16dp"
        android:text="@string/workout"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/settingsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
>>>>>>>> FirebaseDev:app/src/main/res/layout/activity_main.xml

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="34sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <Button
<<<<<<<< HEAD:app/src/main/res/layout/activity_login.xml
        android:id="@+id/registerBtn"
        android:layout_width="183dp"
        android:layout_height="58dp"
        android:text="Register"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/titleTextView"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/userNameTextView"
        app:layout_constraintVertical_bias="0.812" />
========
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

>>>>>>>> FirebaseDev:app/src/main/res/layout/activity_main.xml
=======
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:enabled="false"
        android:text="Log in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/GuestButton"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="63dp"
        android:layout_height="66dp"
        android:layout_gravity="center"
        android:layout_marginTop="42dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="@+id/LoginButton"
        app:layout_constraintStart_toStartOf="@+id/GuestButton"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

    <Button
        android:id="@+id/GuestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guest Login"
        app:layout_constraintBottom_toBottomOf="@+id/LoginButton"
        app:layout_constraintEnd_toStartOf="@+id/LoginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/LoginButton" />

    <Button
        android:id="@+id/VerifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Verify Email"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />


>>>>>>> FirebaseDev
</androidx.constraintlayout.widget.ConstraintLayout>